--- a/dzScript/main.css
+++ b/dzScript/main.css
@@ -1,7 +1,10 @@
 body{
 	display: flex;
 	justify-content: center;
-	font-size: 32px;
+	align-items: center;
+	height: 600px;
+	font-family: segoe print;
+	font-size: 80px;
 	background-color: green;
 }
- 
+  
